<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- Settings -->

    <item   android:id="@+id/action_settings"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

    <item   android:id="@+id/action_add_dish"
        android:title="@string/add_dish"
        app:showAsAction="never"
        />
    <item   android:id="@+id/action_add_type"
        android:title="@string/add_type"
        app:showAsAction="never"
        />
    <item   android:id="@+id/action_modify_dish"
        android:title="@string/modify_dish"
        app:showAsAction="never"
        />
    <item   android:id="@+id/action_modify_type"
        android:title="@string/modify_type"
        app:showAsAction="never"
        />
</menu>