<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:onClick="importImage"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:foregroundGravity="center_vertical"
        android:hint="@string/userName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:foregroundGravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#37B992"
        android:foregroundGravity="center_vertical"
        android:onClick="login"
        android:text="@string/connect_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#00A8ADB3"
        android:foregroundGravity="center_vertical"
        android:onClick="cancel"
        android:text="@string/cancel_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF" />


</LinearLayout>