<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <!-- LinearLayout Inside ScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
<!-- modify type dishes-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="Add Type"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#33C48D" />


    <ImageView
        android:id="@+id/typeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:onClick="importImage"
        app:srcCompat="@drawable/add_image" />

    <TextView
        android:id="@+id/ImportImageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Import dish image"
        android:textAlignment="center"
        android:textColor="#33C48D"
        android:textSize="12sp"
        android:onClick="importImage"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"/>
    <!-- enter dish name-->
    <EditText
        android:id="@+id/dish_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dishName" />
    <!-- enter dish descritption-->
    <EditText
        android:id="@+id/dish_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/description" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#37B992"
        android:foregroundGravity="center_vertical"
        android:onClick="addDish"
        android:text="Add Type"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:backgroundTint="#37B992"
        android:foregroundGravity="center_vertical"
        android:onClick="cancel"
        android:text="@string/cancel_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>